--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/cdk": "^5.2.1",
+    "@angular/animations": "5.2.10",
+    "@angular/cdk": "5.2.1",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
@@ -27,7 +27,7 @@
     "@angular/material": "^5.2.1",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/router": "5.2.10",
     "@ionic-native/core": "4.11.0",
     "@ionic-native/geolocation": "^4.9.2",
     "@ionic-native/http": "^4.9.1",
