--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ django-celery-results==1.0.1
 django-cors-headers==2.4.0
 django-environ==0.4.4
 django-filter==1.1.0
+django-import-export==1.2
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 fitbit==0.3.0
