--- a/activity-suggestion/Dockerfile
+++ b/activity-suggestion/Dockerfile
@@ -16,3 +16,12 @@ RUN Rscript install.r
 
 # Run the server
 CMD gunicorn -b 0.0.0.0:8080 wsgi
+
+# Anaconda installing
+RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh
+RUN bash Anaconda3-5.0.1-Linux-x86_64.sh -b
+RUN rm Anaconda3-5.0.1-Linux-x86_64.sh
+
+# Set path to conda
+#ENV PATH /root/anaconda3/bin:$PATH
+ENV PATH /home/ubuntu/anaconda3/bin:$PATH
