--- a/walking-suggestion-service/Dockerfile
+++ b/walking-suggestion-service/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update && \
     apt-get install -y r-base
 
 # Create and add files to Docker
-WORKDIR /activity-suggestion
-ADD . /activity-suggestion
+WORKDIR /walking-suggestions
+ADD . /walking-suggestions
 
 #Load python dependencies
 RUN pip install -r requirements.txt
@@ -16,7 +16,7 @@ RUN Rscript install.r
 
 RUN apt-get install -y vim
 
-# Anaconda installing
+# # Anaconda installing
 RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh && \
     bash Anaconda3-5.0.1-Linux-x86_64.sh -b && \
     rm Anaconda3-5.0.1-Linux-x86_64.sh
@@ -25,5 +25,14 @@ RUN wget https://repo.continuum.io/archive/Anaconda3-5.0.1-Linux-x86_64.sh && \
 #ENV PATH /root/anaconda3/bin:$PATH
 ENV PATH /root/anaconda3/bin:$PATH
 
+ENV GOOGLE_APPLICATION_CREDENTIALS /credentials/gae-storage-service.json
+ENV GCSFUSE_REPO gcsfuse-jessie
+
+RUN echo "deb http://packages.cloud.google.com/apt $GCSFUSE_REPO main" | tee /etc/apt/sources.list.d/gcsfuse.list
+RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+RUN apt-get update && apt-get install -y gcsfuse
+
+RUN mkdir -p data
+
 # Run the server
-CMD gunicorn -b 0.0.0.0:8080 wsgi
+CMD gcsfuse walking-suggestions-data ./data && gunicorn -b 0.0.0.0:8080 wsgi
