--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -27,7 +27,7 @@ RUN rm Anaconda3-5.0.1-Linux-x86_64.sh
 #ENV PATH /root/anaconda3/bin:$PATH
 ENV PATH /root/anaconda3/bin:$PATH
 
-RUN CONDA install -c conda-forge gpflow
+RUN conda install -c conda-forge gpflow
 
 
 
