--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -31,7 +31,7 @@ ENV PATH /root/anaconda3/bin:$PATH
 
 RUN conda create -n py36 python=3.6
 
-RUN source activate py36
+ENV PATH /root/anaconda3/envs/py36/bin:$PATH
 
 RUN conda install -c conda-forge gpflow
 
