--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -8,6 +8,10 @@ RUN apt-get update && \
 WORKDIR /pooling-service
 ADD . /pooling-service
 
+#ENV PATH /root/anaconda3/bin:$PATH
+ENV PATH /root/anaconda3/bin:$PATH
+
+
 RUN conda create -n py36 python=3.6
 
 RUN conda install --name py36 jupyter
