--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update && \
 WORKDIR /pooling-service
 ADD . /pooling-service
 
+RUN bash Anaconda3-5.2.0-Linux-x86_64.sh -b
+
 #ENV PATH /root/anaconda3/bin:$PATH
 ENV PATH /root/anaconda3/bin:$PATH
 
