--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -10,6 +10,8 @@ ADD . /pooling-service
 
 RUN wget https://repo.continuum.io/archive/Anaconda3-5.2.0-Linux-x86_64.sh
 RUN bash Anaconda3-5.2.0-Linux-x86_64.sh -b
+RUN rm Anaconda3-5.2.0-Linux-x86_64.sh
+
 
 #ENV PATH /root/anaconda3/bin:$PATH
 ENV PATH /root/anaconda3/bin:$PATH
