--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -19,4 +19,6 @@ ENV PATH /root/anaconda3/bin:$PATH
 
 RUN conda create -n py36 python=3.6
 
+RUN source activate py36
+
 RUN conda install --name py36 jupyter
