--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -19,8 +19,6 @@ ENV PATH /root/anaconda3/bin:$PATH
 
 RUN conda create -n py36 python=3.6
 
-
-
 RUN conda install --name py36 jupyter
 
-RUN conda install -c conda-forge gpflow --name py36 jupyter
+RUN conda install --name py36  -c conda-forge gpflow 
