--- a/pooling-service/Dockerfile
+++ b/pooling-service/Dockerfile
@@ -21,4 +21,6 @@ RUN conda create -n py36 python=3.6
 
 RUN conda install --name py36 jupyter
 
+RUN conda install  --name py36 -c conda-forge tensorflow
+
 RUN conda install --name py36  -c conda-forge gpflow 
