--- a/service-template/Dockerfile
+++ b/service-template/Dockerfile
@@ -5,10 +5,17 @@ RUN apt-get update && \
     apt-get install -y r-base
 
 ADD credentials /credentials
+ADD service-template/utils /utils 
+ENV PATH $PATH:/utils
 
+# Install google cloud sdk and gcsfuse
 ENV GOOGLE_APPLICATION_CREDENTIALS /credentials/gae-storage-service.json
+ENV CLOUD_SDK_REPO cloud-sdk-jessie
 ENV GCSFUSE_REPO gcsfuse-jessie
-
-RUN echo "deb http://packages.cloud.google.com/apt $GCSFUSE_REPO main" | tee /etc/apt/sources.list.d/gcsfuse.list
-RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
-RUN apt-get update && apt-get install -y gcsfuse
+RUN echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    echo "deb http://packages.cloud.google.com/apt $GCSFUSE_REPO main" | tee /etc/apt/sources.list.d/gcsfuse.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
+    apt-get update && apt-get install -y gcsfuse google-cloud-sdk
+# Set up google cloud project
+RUN gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS && \
+    gcloud config set project heartsteps-kpwhri
