--- a/client/package.json
+++ b/client/package.json
@@ -39,18 +39,19 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "axios": "^0.18.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "7.1.4",
     "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-background-fetch": "^5.4.1",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-safariviewcontroller": "^1.5.4",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -62,7 +63,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.9.0",
-    "onesignal-cordova-plugin": "^2.4.4",
+    "onesignal-cordova-plugin": "^2.4.6",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
@@ -120,7 +121,10 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-safariviewcontroller": {},
       "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "comnickreidheartsteps"
+        "URL_SCHEME": "comnickreidheartsteps",
+        "ANDROID_SCHEME": " ",
+        "ANDROID_HOST": " ",
+        "ANDROID_PATHPREFIX": "/"
       },
       "onesignal-cordova-plugin": {},
       "cordova-plugin-background-fetch": {},
@@ -130,8 +134,8 @@
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
