--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,8 @@ services:
     depends_on:
       - db
       - server
+    privileged: true
+    network_mode: "host"
 volumes:
   client-node-modules:
   pgdata:
