Add .ipynb* to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ server/app
 static/app
 static/static
 
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
+# Ignore jupyter notebook cache files
+.ipynb*
 
 *~
 *.sw[mnpcod]
