Updated and added all resources

--- a/client/package.json
+++ b/client/package.json
@@ -134,8 +134,8 @@
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
