--- a/docker-compose.gcloud.yaml
+++ b/docker-compose.gcloud.yaml
@@ -11,7 +11,7 @@ services:
     build: ./server
     env_file:
       - .env-production
-    command: python3 manage.py runserver 0.0.0.0:8080
+    command: honcho start web_dev celery rabbitmq
     volumes:
       - ./server:/server
       - cloudsql:/cloudsql
