--- a/fitbit/package.json
+++ b/fitbit/package.json
@@ -1,13 +1,20 @@
 {
+  "name": "HeartSteps",
+  "version": "0.2.0",
+  "private": true,
+  "license": "UNLICENSED",
   "fitbit": {
+    "appUUID": "0bd06f9e-2adc-4391-ab05-d177dda1a167",
     "appType": "clockface",
-    "appDisplayName": "HeartSteps 2.0",
+    "appDisplayName": "HeartSteps",
     "iconFile": "resources/icon.png",
+    "wipeColor": "#ffffff",
     "requestedPermissions": [
       "access_activity",
       "access_heart_rate",
       "access_internet",
       "access_location",
+      "access_user_profile",
       "run_background"
     ],
     "buildTargets": [
@@ -19,9 +26,16 @@
         "name": "HeartSteps 2.0"
       }
     },
-    "appUUID": "d1c8acc6-d253-4beb-81ed-7e9e5804083b"
+    "defaultLanguage": "en-US"
   },
   "scripts": {
     "build": "fitbit-build"
+  },
+  "dependencies": {
+    "@fitbit/sdk": "^3.0.0",
+    "@fitbit/sdk-cli": "^1.5.0",
+    "io-ts": "^1.8.2",
+    "keytar": "^4.4.0",
+    "node-gyp": "^3.8.0"
   }
 }
