--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "@ionic-native/http": "^4.9.1",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/onesignal": "^4.15.0",
-    "@ionic-native/push": "^4.14.0",
+    "@ionic-native/push": "^4.20.0",
     "@ionic-native/safari-view-controller": "^4.15.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -64,6 +64,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.9.0",
     "onesignal-cordova-plugin": "^2.4.6",
+    "phonegap-plugin-push": "^2.1.3",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
@@ -131,7 +132,10 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "Your location will be used to tailor activity suggestions"
       },
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "phonegap-plugin-push": {
+        "FCM_VERSION": "11.6.2"
+      }
     },
     "platforms": [
       "android",
