--- a/walking-suggestion-service/Dockerfile
+++ b/walking-suggestion-service/Dockerfile
@@ -10,6 +10,8 @@ RUN pip install -r requirements.txt
 #Load R dependencies
 RUN Rscript install.r
 
+ENV googleStorageBucket walking-suggestions-data
+
 # Mount GCSFuse Run the server
 RUN mkdir -p ./data
 CMD gcsfuse --implicit-dirs walking-suggestions-data ./data && gunicorn -b 0.0.0.0:8080 wsgi
