Split Procfile so start is just "honcho start"

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,4 +17,4 @@ RUN easy_install apns2
 RUN pip install -r requirements.txt
 
 # Run the server
-CMD honcho start web celery rabbitmq
+CMD honcho -f Procfile-prod start
