--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
     build: ./server
     env_file:
       - .env-development 
-    command: honcho start web_dev celery rabbitmq
+    command: honcho start
     volumes:
       - ./server:/server
       - ./credentials:/credentials
