--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ install:
 
 before_script:
 - docker-compose build service-template walking-suggestion-service anti-sedentary-service
-- docker-compose build server
-- docker-compose build client
+- docker-compose build server > /dev/null
+- docker-compose build client > /dev/null
 
 script:
 - docker-compose run server python manage.py test
