--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "axios": "^0.18.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^8.0.0",
     "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "5.0.0",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -133,8 +133,8 @@
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
