Add OneSignal Client

--- a/.env-production
+++ b/.env-production
@@ -10,3 +10,5 @@ FITBIT_SUBSCRIBER_VERIFICATION_CODE=c9a4a36ec8b41db5ea2c909fa5c4db632c1a469ba991
 HEARTSTEPS_URL=https://heartsteps-kpwhri.appspot.com/api
 ANTI_SEDENTARY_SERVICE_URL=https://35.197.106.169/
 WALKING_SUGGESTION_SERVICE_URL=https://35.232.40.59/
+ONESIGNAL_APP_ID=10532feb-86e3-44e1-9c78-658f0bdb1f3b
+ONESIGNAL_API_KEY=ZTM5ZjkyMTMtYTE1NC00NjhmLWFlMzMtNjc4NWU2ZWE2Mzk1
