--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "axios": "^0.18.0",
-    "cordova-android": "^8.0.0",
+    "cordova-android": "8.0.0",
     "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "^5.0.0",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -121,8 +121,8 @@
       "onesignal-cordova-plugin": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
