--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 before_script:
 - docker-compose build service-template walking-suggestion-service anti-sedentary-service > /dev/null
 - docker-compose build server > /dev/null
-- docker-compose build client > /dev/null
+- docker-compose build client
 
 script:
 - docker-compose run server python manage.py test
