Comment out npm config

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -26,7 +26,7 @@ ADD . /client
 RUN npm install cordova ionic sass -g
 
 # Turn off bin links, because docker gets cranky
-RUN npm config set bin-links false
+# RUN npm config set bin-links false
 
 RUN npm install
 CMD ionic build --prod
