--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,15 @@
-FROM python:3.6
-ENV PYTHONUNBUFFERED 1
+FROM heartsteps_service-template:latest
 
 RUN apt-get update && \
     apt-get install -y postgresql erlang rabbitmq-server
 
 # Install cloud-sql-proxy
-# RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy && \
-#     chmod +x cloud_sql_proxy
+RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy && \
+    chmod +x cloud_sql_proxy
 
 # Create and add files to Docker
 WORKDIR /server
 ADD . /server
-
-RUN mkdir -p credentials && \
-    mv credentials /credentials
 
 RUN easy_install apns2
 
