--- a/.travis.yml
+++ b/.travis.yml
@@ -34,15 +34,11 @@ after_success:
 - gcloud auth activate-service-account --key-file=credentials/gce.json
 - gcloud auth configure-docker -q
 - gcloud config set project ${GAE_PROJECT_ID}
-# copy credentials to server (this is hacky)
-- cp -r credentials server/credentials
-# upload client web app to gae
-- gcloud app deploy -q -v master server/app.yaml static/app.yaml dispatch.yaml
-# upload walking suggestion service
+# upload images
+- docker tag heartsteps_server gcr.io/heartsteps-kpwhri/heartsteps-server
+- docker push gcr.io/heartsteps-kpwhri/heartsteps-server
 - docker tag heartsteps_walking-suggestion-service gcr.io/heartsteps-kpwhri/walking-suggestion-service
 - docker push gcr.io/heartsteps-kpwhri/walking-suggestion-service
-- gcloud compute instances update-container "walking-suggestion-service" --zone="us-central1-a" --container-image="gcr.io/heartsteps-kpwhri/walking-suggestion-service"
-# upload anti-sedentary service
-- docker tag heartsteps_anti-sedentary-service gcr.io/heartsteps-kpwhri/anti-sedentary-service
-- docker push gcr.io/heartsteps-kpwhri/anti-sedentary-service
-- gcloud compute instances update-container "anti-sedentary-service" --zone="us-west1-b" --container-image="gcr.io/heartsteps-kpwhri/anti-sedentary-service"
+- docker tag heartsteps_walking-suggestion-service gcr.io/heartsteps-kpwhri/walking-suggestion-service
+- docker push gcr.io/heartsteps-kpwhri/walking-suggestion-service
+# update kubernetes images...
