--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,29 +1,6 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: rabbitmq
-  labels:
-    app: rabbitmq
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: rabbitmq
-    spec:
-      containers:
-      - name: heartsteps-server
-        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
-        imagePullPolicy: Always
-        command: ['rabbitmq-server', 'start']
-        ports:
-        - containerPort: 5672
-
----
-
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
   name: heartsteps-server
   labels:
     app: heartsteps-server
@@ -38,7 +15,7 @@ spec:
       - name: heartsteps-app
         image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
         imagePullPolicy: Always
-        command: ['honcho', 'start', 'web', 'cloudsql']
+        command: ['honcho', 'start', 'web', 'cloudsql', 'rabbitmq', 'celery']
         env:
           - name: ALLOWED_HOSTS
             value: '35.247.62.68'
@@ -46,38 +23,29 @@ spec:
             value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
           - name: DATABASE_URL
             value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
         ports:
         - containerPort: 8080
 
 ---
 
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: heartsteps-worker
+  name: heartsteps-server
   labels:
-    app: heartsteps-worker
+    app: heartsteps-server
 spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: heartsteps-worker
-    spec:
-      containers:
-      - name: heartsteps-worker
-        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
-        imagePullPolicy: Always
-        command: ['honcho', 'start', 'celery', 'cloudsql']
-        env:
-          - name: ALLOWED_HOSTS
-            value: '35.247.62.68'
-          - name: SECRET_KEY
-            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
-          - name: DATABASE_URL
-            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev'
-        ports:
-        - containerPort: 8080
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: heartsteps-server
+
 
 ---
 
@@ -102,6 +70,21 @@ spec:
           privileged: true
         ports:
         - containerPort: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: walking-suggestion
+  labels:
+    run: walking-suggestion
+spec:
+  ports:
+  - port: 8080
+    targetPort: 8080
+  selector:
+    app: walking-suggestion-service
 
 ---
 
@@ -132,47 +115,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: heartsteps-server
+  name: anti-sedentary
   labels:
-    app: heartsteps-server
+    run: anti-sedentary
 spec:
-  type: LoadBalancer
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
   selector:
-    app: heartsteps-server
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: rabbitmq
-  labels:
-    run: rabbitmq
-spec:
-  ports:
-  - name: default
-    port: 5672
-    protocol: TCP
-    targetPort: 5672
-  selector:
-    run: rabbitmq
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: walking-suggestion
-  labels:
-    run: walking-suggestion
-spec:
-  ports:
-  - name: default
-    protocol: TCP
-    port: 80
-    targetPort: 8080
-  selector:
-    run: walking-suggestion-service
+    app: anti-sedentary-service
