--- a/deployment.yaml
+++ b/deployment.yaml
@@ -40,6 +40,7 @@ metadata:
     app: heartsteps-server
 spec:
   type: LoadBalancer
+  loadBalancerIP: "35.197.106.169"
   ports:
   - port: 80
     targetPort: 8080
