--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     image: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
+  rabbitmq:
+    image: rabbitmq:3.7
   service-template:
     build:
       context: ./
@@ -41,7 +43,7 @@ services:
     build: ./server
     env_file:
       - .env-development 
-    command: honcho start dev celery rabbitmq
+    command: honcho start dev celery
     volumes:
       - ./server:/server
       - ./credentials:/credentials
@@ -49,6 +51,7 @@ services:
       - "8080:8080"
     depends_on:
       - db
+      - rabbitmq
   client:
     build: ./client
     env_file:
