--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,54 +1,3 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: heartsteps-server
-  labels:
-    app: heartsteps-server
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: heartsteps-server
-    spec:
-      containers:
-      - name: heartsteps-app
-        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
-        imagePullPolicy: Always
-        command: ['honcho', 'start', 'web', 'cloudsql', 'rabbitmq', 'celery']
-        env:
-          - name: ALLOWED_HOSTS
-            value: '35.247.62.68'
-          - name: SECRET_KEY
-            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
-          - name: DATABASE_URL
-            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev'
-          - name: ANTI_SEDENTARY_SERVICE_URL
-            value: 'http://anti-sedentary:8080'
-          - name: WALKING_SUGGESTION_SERVICE_URL
-            value: 'http://walking-suggestion:8080'
-        ports:
-        - containerPort: 8080
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: heartsteps-server
-  labels:
-    app: heartsteps-server
-spec:
-  type: LoadBalancer
-  loadBalancerIP: "35.197.106.169"
-  ports:
-  - port: 80
-    targetPort: 8080
-  selector:
-    app: heartsteps-server
-
-
----
 
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -125,3 +74,160 @@ spec:
     targetPort: 8080
   selector:
     app: anti-sedentary-service
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: rabbitmq
+  labels:
+    app: rabbitmq
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: rabbitmq
+    spec:
+      containers:
+      - name: rabbitmq
+        image: rabbitmq:3.7
+        ports:
+        - containerPort: 5672
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: rabbitmq
+  labels:
+    run: rabbitmq
+spec:
+  ports:
+  - port: 5672
+    targetPort: 5672
+  selector:
+    app: rabbitmq
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: heartsteps-worker
+  labels:
+    app: heartsteps-worker
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: heartsteps-worker
+    spec:
+      containers:
+      - name: heartsteps-app
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
+        imagePullPolicy: Always
+        command: ['honcho', 'start', 'cloudsql', 'celery']
+        env:
+          - name: SECRET_KEY
+            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+          - name: DATABASE_URL
+            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: heartsteps-server
+  labels:
+    app: heartsteps-server
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: heartsteps-server
+    spec:
+      containers:
+      - name: heartsteps-app
+        image: gcr.io/heartsteps-kpwhri/heartsteps-server:latest
+        imagePullPolicy: Always
+        command: ['honcho', 'start', 'cloudsql', 'web']
+        env:
+          - name: ALLOWED_HOSTS
+            value: '35.186.201.20,heartsteps.net,heartsteps-service,heartsteps.nickreid.com'
+          - name: SECRET_KEY
+            value: 'ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+          - name: DATABASE_URL
+            value: 'psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev'
+          - name: ANTI_SEDENTARY_SERVICE_URL
+            value: 'http://anti-sedentary:8080'
+          - name: WALKING_SUGGESTION_SERVICE_URL
+            value: 'http://walking-suggestion:8080'
+        ports:
+        - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /privacy-policy
+            port: 8080
+            httpHeaders:
+              - name: Host
+                value: heartsteps-service
+          periodSeconds: 20
+        readinessProbe:
+          httpGet:
+            path: /privacy-policy
+            port: 8080
+            httpHeaders:
+              - name: Host
+                value: heartsteps-service
+          initialDelaySeconds: 30
+          periodSeconds: 10
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: heartsteps-service
+  labels:
+    app: heartsteps-server
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: heartsteps-server
+
+---
+
+apiVersion: networking.gke.io/v1beta1
+kind: ManagedCertificate
+metadata:
+  name: nickreid-heartsteps-cert
+spec:
+  domains:
+    - nickreid.com
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: heartsteps
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: heartsteps-global
+    networking.gke.io/managed-certificates: nickreid-heartsteps-cert
+spec:
+  backend:
+    serviceName: heartsteps-service
+    servicePort: 80
