--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
 - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
 - sudo apt-get update && sudo apt-get install google-cloud-sdk
+- gcloud components install kubectrl
 
 before_script:
 - docker-compose build service-template walking-suggestion-service anti-sedentary-service > /dev/null
@@ -24,12 +25,10 @@ after_success:
 - cp .env-production server/.env
 - cp .env-production client/.env
 # move client files into server
-- cp -r client/www static/app
+- gsutil -m rsync -dr client/www gs://heartsteps-assets/app
 # collect static files for server
 - docker-compose run server python manage.py collectstatic
-- cp -r server/static static
-# Migrate database
-- docker-compose -f docker-compose.yaml -f docker-compose.gcloud.yaml run server python manage.py migrate
+- gsutil -m rsync -dr server/static gs://heartsteps-assets/static
 # login with gcloud
 - gcloud auth activate-service-account --key-file=credentials/gce.json
 - gcloud auth configure-docker -q
@@ -42,3 +41,7 @@ after_success:
 - docker tag heartsteps_walking-suggestion-service gcr.io/heartsteps-kpwhri/walking-suggestion-service
 - docker push gcr.io/heartsteps-kpwhri/walking-suggestion-service
 # update kubernetes images...
+- sed -ie "s/DEFAULT_BUILD_NUMBER/$TRAVIS_BUILD_NUMBER/g" deployment.yaml
+- kubectrl apply -f deployment.yaml
+# Migrate database
+- docker-compose -f docker-compose.yaml -f docker-compose.gcloud.yaml run server python manage.py migrate
