--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
 - sudo apt-get update && sudo apt-get install google-cloud-sdk
 - gcloud components install kubectrl
+- gcloud container clusters get-credentials heartsteps
 
 before_script:
 - docker-compose build service-template walking-suggestion-service anti-sedentary-service > /dev/null
