--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ after_success:
 - docker tag heartsteps_walking-suggestion-service gcr.io/heartsteps-kpwhri/walking-suggestion-service
 - docker push gcr.io/heartsteps-kpwhri/walking-suggestion-service
 # update kubernetes images...
-- sed -ie "s/DEFAULT_BUILD_NUMBER/$TRAVIS_BUILD_NUMBER/g" deployment.yaml
+- sed -i "s/DEFAULT_BUILD_NUMBER/'$TRAVIS_BUILD_NUMBER'/g" deployment.yaml
 - kubectl apply -f deployment.yaml
 # Migrate database
 - docker-compose -f docker-compose.yaml -f docker-compose.gcloud.yaml run server python manage.py migrate
